--- a/Pacemaker/app/src/main/res/layout/activity_layout.xml
+++ b/Pacemaker/app/src/main/res/layout/activity_layout.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".core.navigation.SplashActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_chainStyle="spread"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
