--- a/Pacemaker/app/src/main/res/values/styles.xml
+++ b/Pacemaker/app/src/main/res/values/styles.xml
@@ -13,4 +13,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="CustomAppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="CustomAppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="CustomAppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
