--- a/Pacemaker/app/src/main/res/layout/fragment_history.xml
+++ b/Pacemaker/app/src/main/res/layout/fragment_history.xml
@@ -5,12 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".features.pacemaker.home.HomeFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="HistoryFragment"
-        android:textSize="30sp"/>
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fHistory_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
