--- a/Pacemaker/app/src/main/res/layout/fragment_home.xml
+++ b/Pacemaker/app/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fHome_fabtn"
+        android:id="@+id/fHome_floating_action_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
