--- a/Pacemaker/app/src/main/res/layout/recyclerview_exercise_item.xml
+++ b/Pacemaker/app/src/main/res/layout/recyclerview_exercise_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="65dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/rvHomeItem_clo_main"
+        android:id="@+id/rvExerciseItem_clo_main"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="#80dddddd"
@@ -15,18 +15,18 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
-            android:id="@+id/rvHomeItem_iv_part"
+            android:id="@+id/rvExerciseItem_iv_part"
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:contentDescription="@string/image_not_found"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/rvHomeItem_tv_name"
+            app:layout_constraintEnd_toStartOf="@+id/rvExerciseItem_tv_name"
             app:layout_constraintHorizontal_chainStyle="spread_inside"/>
 
         <TextView
-            android:id="@+id/rvHomeItem_tv_name"
+            android:id="@+id/rvExerciseItem_tv_name"
             android:layout_width="0dp"
             android:layout_height="55dp"
             android:gravity="center"
@@ -34,12 +34,12 @@
             android:textColor="#ff000000"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/rvHomeItem_iv_part"
-            app:layout_constraintEnd_toStartOf="@+id/rvHomeItem_tv_mass"/>
+            app:layout_constraintStart_toEndOf="@+id/rvExerciseItem_iv_part"
+            app:layout_constraintEnd_toStartOf="@+id/rvExerciseItem_tv_mass"/>
 
 
         <TextView
-            android:id="@+id/rvHomeItem_tv_mass"
+            android:id="@+id/rvExerciseItem_tv_mass"
             android:layout_width="60dp"
             android:layout_height="55dp"
             android:gravity="center"
@@ -48,12 +48,12 @@
             android:textColor="#ff000000"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/rvHomeItem_tv_name"
-            app:layout_constraintEnd_toStartOf="@+id/rvHomeItem_tv_set"/>
+            app:layout_constraintStart_toEndOf="@+id/rvExerciseItem_tv_name"
+            app:layout_constraintEnd_toStartOf="@+id/rvExerciseItem_tv_set"/>
 
 
         <TextView
-            android:id="@+id/rvHomeItem_tv_set"
+            android:id="@+id/rvExerciseItem_tv_set"
             android:layout_width="60dp"
             android:layout_height="55dp"
             android:gravity="center"
@@ -62,12 +62,11 @@
             android:textColor="#ff000000"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/rvHomeItem_tv_mass"
-            app:layout_constraintEnd_toStartOf="@+id/rvHomeItem_tv_interval"/>
-
+            app:layout_constraintStart_toEndOf="@+id/rvExerciseItem_tv_mass"
+            app:layout_constraintEnd_toStartOf="@+id/rvExerciseItem_tv_interval"/>
 
         <TextView
-            android:id="@+id/rvHomeItem_tv_interval"
+            android:id="@+id/rvExerciseItem_tv_interval"
             android:layout_width="60dp"
             android:layout_height="55dp"
             android:gravity="center"
@@ -76,7 +75,7 @@
             android:textColor="#ff000000"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/rvHomeItem_tv_set"
+            app:layout_constraintStart_toEndOf="@+id/rvExerciseItem_tv_set"
             app:layout_constraintEnd_toEndOf="parent"/>
 
 
