--- a/Pacemaker/app/src/main/res/layout/fragment_addition.xml
+++ b/Pacemaker/app/src/main/res/layout/fragment_addition.xml
@@ -1,19 +1,293 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".features.pacemaker.addition.AdditionFragment">
 
-    <TextView
-        android:id="@+id/fAddition_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:textAllCaps="false"
-        android:text="Addition"
-        android:textSize="30sp"
-        android:textColor="#ff000000"/>
+    <!-- 상태 레이아웃(백키랑 저장키가 들어간다.) -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fAddition_clo_status"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/fAddition_clo_part_img"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/fAddition_iv_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:contentDescription="@string/image_not_found"
+            android:src="@drawable/back_key_img"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_iv_save"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintHorizontal_chainStyle="packed"/>
+
+        <ImageView
+            android:id="@+id/fAddition_iv_save"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/save_img"
+            android:layout_marginStart="20dp"
+            android:contentDescription="@string/image_not_found"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_iv_back"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- 부위 이미지 레이아웃(부위 이미지들이 들어간다.) -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fAddition_clo_part_img"
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fAddition_clo_status"
+        app:layout_constraintBottom_toTopOf="@+id/fAddition_clo_name">
+
+        <TextView
+            android:id="@+id/fAddition_tv_part"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/fAddition_part_txv"
+            android:textSize="20sp"
+            android:textColor="#ff000000"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_iv_part_one"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+
+        <ImageView
+            android:id="@+id/fAddition_iv_part_one"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/part_one_unclicked_img"
+            android:contentDescription="@string/image_not_found"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_iv_part_two"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_tv_part"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:id="@+id/fAddition_iv_part_two"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/part_two_unclicked_img"
+            android:contentDescription="@string/image_not_found"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_iv_part_three"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_iv_part_one"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:id="@+id/fAddition_iv_part_three"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/part_three_unclicked_img"
+            android:contentDescription="@string/image_not_found"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_iv_part_four"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_iv_part_two"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:id="@+id/fAddition_iv_part_four"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/part_four_unclicked_img"
+            android:contentDescription="@string/image_not_found"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_iv_part_five"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_iv_part_three"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <ImageView
+            android:id="@+id/fAddition_iv_part_five"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/part_five_unclicked_img"
+            android:contentDescription="@string/image_not_found"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_iv_part_four"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- 운동 이름 레이아웃 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fAddition_clo_name"
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fAddition_clo_part_img"
+        app:layout_constraintBottom_toTopOf="@+id/fAddition_clo_mass">
+
+        <TextView
+            android:id="@+id/fAddition_tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/fAddition_name_txv"
+            android:textSize="20sp"
+            android:textColor="#ff000000"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_ev_name"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+
+        <EditText
+            android:id="@+id/fAddition_ev_name"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:inputType="text"
+            android:importantForAutofill="no"
+            android:textSize="16sp"
+            android:hint="@string/fAddition_name_hint_txv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_tv_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- 중량 레이아웃 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fAddition_clo_mass"
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fAddition_clo_name"
+        app:layout_constraintBottom_toTopOf="@+id/fAddition_clo_set">
+
+        <TextView
+            android:id="@+id/fAddition_tv_mass"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/fAddition_mass_txv"
+            android:textSize="20sp"
+            android:textColor="#ff000000"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_ev_mass"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+
+        <EditText
+            android:id="@+id/fAddition_ev_mass"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:inputType="number"
+            android:importantForAutofill="no"
+            android:textSize="16sp"
+            android:hint="@string/fAddition_mass_hint_txv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_tv_mass"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- 세트 레이아웃 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fAddition_clo_set"
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fAddition_clo_mass"
+        app:layout_constraintBottom_toTopOf="@+id/fAddition_clo_interval">
+
+        <TextView
+            android:id="@+id/fAddition_tv_set"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/fAddition_set_txv"
+            android:textSize="20sp"
+            android:textColor="#ff000000"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_ev_set"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+
+        <EditText
+            android:id="@+id/fAddition_ev_set"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:inputType="number"
+            android:importantForAutofill="no"
+            android:textSize="16sp"
+            android:hint="@string/fAddition_set_hint_txv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_tv_set"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- 인터벌(휴식시간) 레이아웃 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fAddition_clo_interval"
+        android:layout_width="340dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fAddition_clo_set">
+
+        <TextView
+            android:id="@+id/fAddition_tv_interval"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="@string/fAddition_interval_txv"
+            android:textSize="20sp"
+            android:textColor="#ff000000"
+            app:layout_constraintEnd_toStartOf="@+id/fAddition_ev_interval"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"/>
+
+        <EditText
+            android:id="@+id/fAddition_ev_interval"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:inputType="number"
+            android:importantForAutofill="no"
+            android:textSize="16sp"
+            android:hint="@string/fAddition_interval_hint_txv"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/fAddition_tv_interval"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_chainStyle="spread_inside" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
