--- a/Pacemaker/app/src/main/res/values/styles.xml
+++ b/Pacemaker/app/src/main/res/values/styles.xml
@@ -22,4 +22,8 @@
 
     <style name="CustomAppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name = "CustomAppTheme.Popup" parent="Theme.AppCompat.Dialog">
+        <item name="windowNoTitle">true</item>
+    </style>
+
 </resources>
