--- a/Pacemaker/app/src/main/res/values/styles.xml
+++ b/Pacemaker/app/src/main/res/values/styles.xml
@@ -22,8 +22,19 @@
 
     <style name="CustomAppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CustomAppTheme.Popup" parent="CustomAppTheme.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+    </style>
+<!---
     <style name = "CustomAppTheme.Popup" parent="Theme.AppCompat.Dialog">
         <item name="windowNoTitle">true</item>
+        <item name="background"
     </style>
-
+-->
 </resources>
